# ginear

./: .gitignore  README.md  pyproject.toml
claude-code/ginear-linear-ticket/: SKILL.md
ginear/: __main__.py  ginear.py  queries.py  utils.py
