[tool.poetry]
name = "ginear"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
pyfzf = "^0.3.1"
requests = "^2.31.0"

[tool.poetry.scripts]
gin = "ginear.ginear:run"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
types-requests = "^2.31.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
