[tool.poetry]
name = "ginear"
version = "0.1.9"
description = ""
authors = ["Hans-Wilhelm Warlo <5417271+warlo@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/warlo/ginear/"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
pyfzf = "^0.3.1"
requests = "^2.31.0"
typer = "^0.9.0"

[tool.poetry.scripts]
gin = "ginear.ginear:run"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
types-requests = "^2.31.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = "venv"
